[gd_scene load_steps=15 format=1]

[ext_resource path="res://container.gd" type="Script" id=1]
[ext_resource path="res://Background/Backgroud.tscn" type="PackedScene" id=2]
[ext_resource path="res://NewBackground/Mountains-01.png" type="Texture" id=3]
[ext_resource path="res://Plane 1/player1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Plane 2/Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://health bar/Health Heart-02.png" type="Texture" id=6]
[ext_resource path="res://health bar/image.png" type="Texture" id=7]
[ext_resource path="res://NewBackground/Clouds/clouds.tscn" type="PackedScene" id=8]
[ext_resource path="res://ALL THE SCENES/pause_menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Win screen/Player 1 wins-02.png" type="Texture" id=10]
[ext_resource path="res://Win screen/Player 2 wins-02.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, 68.7703, 80.3174, 0, 0, 0, 0, 2328.46, 92.1071, 0, 0, 0, 0, 2355.62, 91.4137, 0, 0, 0, 0, 2959.59, 123.534, 0, 0, 0, 0, 3271.62, 151.537, 0, 0, 0, 0, -194.145, 68.9049 )
}

[sub_resource type="NavigationPolygon" id=3]

vertices = Vector2Array( 1.35464, 0.564804, 1405.01, -1.82697, 1405.01, 770.568, -10.3531, 762.218 )
polygons = [ IntArray( 0, 1, 2, 3 ) ]
outlines = [ Vector2Array( 1.35464, 0.564804, 1405.01, -1.82697, 1405.01, 770.568, -10.3531, 762.218 ) ]

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Node2D" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 710.074, 200 )
transform/scale = Vector2( 1, 0.8 )

[node name="mountains" type="Sprite" parent="Node2D"]

visibility/visible = false
transform/pos = Vector2( -10.1849, 321.676 )
transform/scale = Vector2( 1, 0.206641 )
texture = ExtResource( 3 )

[node name="mountains" type="Sprite" parent="Node2D/mountains"]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 200, -2500 )
transform/scale = Vector2( 1, 6 )
texture = ExtResource( 3 )

[node name="more" type="Sprite" parent="Node2D/mountains/mountains"]

transform/pos = Vector2( -281.327, -43.7368 )
texture = ExtResource( 3 )

[node name="more3" type="Sprite" parent="Node2D/mountains/mountains"]

transform/pos = Vector2( -281.327, -43.7368 )
texture = ExtResource( 3 )

[node name="more1" type="Sprite" parent="Node2D/mountains/mountains"]

transform/pos = Vector2( -644.493, -6.24799 )
texture = ExtResource( 3 )

[node name="more2" type="Sprite" parent="Node2D/mountains/mountains"]

transform/pos = Vector2( 874.669, -24.9925 )
texture = ExtResource( 3 )
flip_h = true

[node name="Area2D" type="Area2D" parent="Node2D/mountains"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 80, 0, 0, 10, -35.4905, 777.587 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/mountains/Area2D"]

transform/pos = Vector2( -35.4905, 777.587 )
transform/scale = Vector2( 80, 10 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="player1" parent="." instance=ExtResource( 4 )]

process/pause_mode = 1
transform/pos = Vector2( 100, 111.266 )
transform/scale = Vector2( 0.2, 0.3 )

[node name="Player2" parent="." instance=ExtResource( 5 )]

process/pause_mode = 1
transform/pos = Vector2( 992.087, 160.79 )
transform/scale = Vector2( 0.2, 0.3 )

[node name="HP1" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 7.0
margin/right = 105.0
margin/bottom = 24.0
custom_colors/font_color = Color( 0.259001, 0.0635529, 0.957031, 1 )
custom_colors/font_color_shadow = Color( 0.0966787, 0.0457764, 0.976562, 1 )
text = "BLUE HP: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HP2" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1200.0
margin/top = 8.0
margin/right = 1255.0
margin/bottom = 22.0
custom_colors/font_color = Color( 0.976562, 0.0457764, 0.0457764, 1 )
custom_colors/font_color_shadow = Color( 0.980469, 0.0229797, 0.0229797, 1 )
text = "RED HP: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BL1" type="Sprite" parent="."]

transform/pos = Vector2( 60, 40 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="BL2" type="Sprite" parent="."]

transform/pos = Vector2( 110, 40 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="BL3" type="Sprite" parent="."]

transform/pos = Vector2( 160, 40 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="RL1" type="Sprite" parent="."]

transform/pos = Vector2( 947.43, 39.0777 )
transform/rot = -180.0
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
flip_h = true
flip_v = true
modulate = Color( 1, 0, 0, 1 )

[node name="ProgressBar" type="ProgressBar" parent="RL1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -406.0
margin/top = 127.0
margin/right = -208.0
margin/bottom = 143.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="RL2" type="Sprite" parent="."]

transform/pos = Vector2( 997.233, 39.0777 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
modulate = Color( 0.960938, 0.0450439, 0.0450439, 1 )

[node name="RL3" type="Sprite" parent="."]

transform/pos = Vector2( 1044.27, 40 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
modulate = Color( 0.984375, 0.00384521, 0.00384521, 1 )

[node name="cloudpath" type="Path2D" parent="."]

transform/pos = Vector2( 20.9659, 37.2726 )
curve = SubResource( 2 )

[node name="followCloud" type="PathFollow2D" parent="cloudpath"]

transform/pos = Vector2( 68.7703, 80.3174 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="clouds" parent="cloudpath/followCloud" instance=ExtResource( 8 )]

process/pause_mode = 1
visibility/opacity = 0.67
transform/pos = Vector2( 815.622, 5.21378 )
transform/scale = Vector2( 0.3, 0.3 )

[node name="Navigation2D" type="Navigation2D" parent="."]

editor/display_folded = true
visibility/visible = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]

navpoly = SubResource( 3 )
enabled = true

[node name="pause_menu" parent="." instance=ExtResource( 9 )]

process/pause_mode = 2
margin/top = 232.0
margin/bottom = 444.0

[node name="Player_1_win" type="Sprite" parent="."]

process/pause_mode = 2
transform/pos = Vector2( 206.647, 81.3397 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
centered = false

[node name="Player2_win" type="Sprite" parent="."]

process/pause_mode = 2
transform/pos = Vector2( 570.532, 138.683 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
modulate = Color( 0.464844, 0.0581055, 0.0581055, 1 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_enter" from="Node2D/mountains/Area2D" to="." method="_on_Area2D_body_enter"]


